# genetic_tsp

./: .gitignore  CMakeLists.txt  vcpkg.json
data/molecular_configs/: input.liquid
lib/: CMakeLists.txt  concepts.hpp  genetic_process.hpp  utils.hpp
src/: 1.cpp  2.cpp  CMakeLists.txt
src/genetic_algorithms/: tsp_ga.hpp  tsp_ga1.hpp  tsp_ga_static.hpp
src/include/: config.hpp  config.hpp.in
tests/: CMakeLists.txt  TestCatch.cpp  TestShuffle.cpp  TestUtils.cpp
